--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,7 +24,7 @@ body {
     width: 100%;
     background-color:white;
     padding: 0px 20px 0px 20px;
-    box-shadow: 5px 5px 8px gray;
+    box-shadow: 5px 5px 8px rgb(37, 37, 37);
     z-index: 1;
 }
 .navigationbar ul {
@@ -95,4 +95,38 @@ body {
     left: 0;
     height: 750px;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+section{
+    display: block;
+    padding: 0%;
+    margin: 0%;
+}
+
+.about-section {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    background-color: #e9dccd;
+    padding: 5% 15%;
+}
+
+.about-content {
+    display: block;
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+}
+
+.about-content h1{
+    font-family: "Bitter", serif;
+    font-size: 40px;
+    font-weight: normal;
+    color: black;
+}
+
+.about-content p{
+    font-family: "Lato", sans-serif;
+    font-size: 18px;
+    color: rgb(87, 87, 87);
 }
