--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,17 +6,15 @@ body {
     background-color: white;  
 }
 
+/* Header Start Here */
+
 .main-header {
     position: relative;
     width: 100%;
     height: 700px;
 }
-.logo img{
-    float: left;
-    height: 100px;
-    width: 120px;
-    padding-left: 10%;
-}
+
+/* Main Navigation Bar */
 
 .navigationbar {
     position: fixed;
@@ -27,6 +25,18 @@ body {
     box-shadow: 5px 5px 8px rgb(37, 37, 37);
     z-index: 1;
 }
+
+/* Logo */
+
+.logo img{
+    float: left;
+    height: 100px;
+    width: 120px;
+    padding-left: 10%;
+}
+
+/* Navigation Menu Item */
+
 .navigationbar ul {
     list-style: none;
     float: right;
@@ -52,6 +62,8 @@ body {
     padding: 20px;
 }
 
+/* Header Banner */
+
 .banner {
     width: 100%;
     height: 750px;
@@ -59,6 +71,16 @@ body {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;    
+}
+
+.bg-filter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 750px;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .banner-heading{
@@ -87,15 +109,11 @@ body {
     margin: 0%;
 }
 
-.bg-filter {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 750px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
+
+/* Header End Here */
+
+
+/* Body Sections Start Here */
 
 section{
     display: block;
@@ -111,22 +129,99 @@ section{
     padding: 5% 15%;
 }
 
-.about-content {
+.menu-section {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    background-color: white;
+    padding: 5% 15%;
+}
+
+.location-section {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    background-color: #e9dccd;
+    padding: 5% 15%;
+}
+
+.about-content, .menu-content, .location-content {
     display: block;
     box-sizing: border-box;
     padding: 0%;
     margin: 0%;
 }
 
-.about-content h1{
+.about-content h1, .menu-content h1, .location-content h1{
     font-family: "Bitter", serif;
     font-size: 40px;
     font-weight: normal;
     color: black;
 }
 
-.about-content p{
+.about-content p, .menu-content p{
     font-family: "Lato", sans-serif;
     font-size: 18px;
+    word-spacing: 5px;
     color: rgb(87, 87, 87);
+    margin-bottom: 5%;
+}
+
+.about-gallery , .menu-gallery, .location-gallery{
+    display: flex;
+    box-sizing: border-box;
+}
+
+.about-image {
+    width: 20%;
+    height: 200px;
+    margin: 0px 20px;
+    background-position: center center;
+    background-size: cover;
+    justify-content: space-between;
+}
+
+.menu-items {
+    width: 50%;
+    text-align: center;
+}
+
+.menu-image {
+    width: 90%;
+    height: 300px;
+    margin: 0% 5%;
+    background-position: center center;
+    background-size: cover;
+}
+
+.menu-items h1, .menu-text{
+    font-family: 'Lato', sans-serif;
+}
+
+.location-gallery {
+    width: 60%;
+    height: 300px;
+    margin: 0% 2%;
+    background-size: cover;
+}
+
+.location-item{
+    display: flex;
+}
+
+.location-text {
+    width: 50%;
+    height: 300px;
+    font-family: 'Lato', sans-serif;
+}
+
+/* Body Section End Here */
+
+footer {
+    width: 100%;
+    padding: 10px 0px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
 }
