--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,21 @@ body {
     width: 100%;
     margin: 0%;
     background-color: white;  
+    animation-name: fadeIn;
+    animation-duration: 2s;
+}
+
+@keyframes fadeIn 
+{
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Header Start Here */
